@@ -1,5 +1,3 @@
-- re-add the function that filled the ethernet mask
-- make it save correctly modem info in debian
 - check that it's handling correctly the wvdial modem connections
 - implement enable_iface_with_config for PPP devices
 - complete the locations stuff
