@@ -50,6 +50,7 @@ void  on_host_aliases_delete_clicked     (GtkWidget*, gpointer);
 
 void  on_dialog_changed (GtkWidget*, gpointer);
 
+gboolean on_ip_address_focus_out (GtkWidget*, GdkEventFocus*, gpointer);
 gboolean callbacks_check_hostname_hook (GstDialog*, gpointer);
 
 #endif /* __CALLBACKS_H */
